--- a/index.html
+++ b/index.html
@@ -26,6 +26,18 @@
         </div>
     </section>
 
+    <section class="mid-banner">
+        <div class="second-width">
+            <img src="images/mathe.png" alt="">
+        </div>
+        <div class="second-width">
+            <h1>Big Dream</h1>
+            <h3>Become a web developer</h3>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <a class="download-resume " target="_blank" href="https://programminghero1.github.io/developer-portfolio/">DOWNLOAD RESUME</a>
+        </div>
+    </section>
+
 </body>
 
 </html>
